request fields unification
