# app/controllers/user.js
@@ -76,19 +76,21 @@ const register = async (req, res, next) => {
   }
   */
   const {
-    gender,
-    name,
-    surname,
+    title,
+    firstName,
+    lastName,
     email,
     phone,
     technologies,
+    login,
+    githubLink,
     password: notHashedPassport
   } = req.body
 
   const validateUser = ajv.compile({ $ref: 'swagger.json#/definitions/User' })
   const valid = validateUser(req.body)
   if (!valid) {
-    // Wysyła domyślną tablicę błędów generowaną przez ajv, wymaga modyfikacji
+    // Wysyła domyślną tablicę błędów generowaną przez ajv, ?wymaga modyfikacji?
     return res.status(400).send(validateUser.errors).end()
   } else {
     let existingUser
@@ -97,30 +99,39 @@ const register = async (req, res, next) => {
         email: email
       })
     } catch (err) {
-      return res.status(500).send('Nieudana rejestracja').end()
+      return res.status(500).send(`Nieudana rejestracja (${err})`).end()
     }
 
     let password
     try {
       password = await bcrypt.hash(notHashedPassport, 12)
     } catch (err) {
-      return res.status(500).send('Nieudana rejestracja').end()
+      return res.status(500).send(`Nieudana rejestracja (${err})`).end()
+    }
+    let activationCode
+    try {
+      activationCode = await Math.floor(Math.random() * (99999999 - 10000000) + 10000000)
+    } catch (err) {
+      return res.status(500).send(`Nieudana rejestracja (${err})`).end()
     }
 
     const createdUser = new User({
-      gender,
-      name,
-      surname,
+      title,
+      firstName,
+      lastName,
       email,
       phone,
       technologies,
-      password
+      login,
+      password,
+      githubLink,
+      activationCode
     })
 
     try {
       await createdUser.save()
     } catch (err) {
-      return res.status(500).send('Nieudana rejestracja').end()
+      return res.status(500).send(`Nieudana rejestracja (${err})`).end()
     }
   }
   res.status(200).send('Udana rejestracja').end()
